<resources>
    <string name="app_name">Athlist</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sing_up_today">New user? Sing up today!</string>
    <string name="help_us_get_you_started">Help us get you started!</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_text">Welcome Text</string>
    <string name="today_s_date">Today\'s date</string>
    <string name="test">Test</string>
    <string name="profile">Profile</string>
    <string name="athlete_popularity">Athlete popularity</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="connect_to_strava">Connect to Strava</string>
    <string name="my_profile">My Profile</string>
    <string name="strava">Strava</string>
    <string name="add_information">Add information</string>
    <string name="email_example">milan1andjelovic@gmail.com</string>
    <string name="loading">Loading...</string>
    <string name="title">Title</string>
    <string name="insert_title">Insert title :</string>
    <string name="information">Information :</string>
    <string name="connect_to_strava_in_order_to_display_profile_information">Connect to strava in order to display profile information!</string>
    <string name="download_data">Dowload Data</string>
    <string name="strava_email">Strava Email</string>
    <string name="strava_password">Strava Password</string>
    <string name="view_activities">View Activities</string>
    <string name="view_profile">View Profile</string>
    <string name="download_strava_profile">Download strava profile</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="backArrow"><![CDATA[<]]></string>
    <string name="nextArrow"><![CDATA[>]]></string>
    <string name="empty" />
    <string name="filters">Filters</string>
    <string name="profile_name">Profile Name</string>
    <string name="select_a_profile_to_receive_activities">Select a profile to receive activities</string>
    <string name="add_monthly_activities">Add monthly activities</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="link_to_strava_monthly_activities">Link to Strava monthly activities</string>
    <string name="add_activities">Add Activities</string>
    <string name="create_athlete_profile">Create athlete profile:</string>
    <string name="example">Example:</string>
    <string name="url_example">Url example:</string>
    <string name="monthly_activities_url_example">https://www.strava.com/athletes/26934035#interval?interval=202204&amp;interval_type=month&amp;chart_type=miles&amp;year_offset=0</string>
    <string name="select_a_profile">Select a profile:</string>
    <string name="advanced_view">Advanced View</string>
    <string name="display_segments_for">Display segments for:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="start_date">Start date</string>
    <string name="to">To</string>
    <string name="end_date">End date</string>
    <string name="display">Display</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="athlete_profiles">Athlete Profiles:</string>
    <string name="segments">Segments</string>
    <string name="distance">Distance</string>
    <string name="movingtime_nelapsedtime">MovingTime/\nElapsedTime</string>
    <string name="calories">Calories</string>
    <string name="pace">Average\nPace</string>
    <string name="athlete_profile">Athlete Profile</string>
    <string name="display_by">Display by</string>
    <string name="year_dots">Year:</string>
    <string name="logout">Logout</string>
    <string name="activities">Activities</string>
    <string name="profiles">Profiles</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="add_server_address">Add server address</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="server_address">Server address</string>
    <string name="recover">Recover</string>


</resources>