<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddAthleteActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


    <TextView
        android:id="@+id/textView"
        android:padding="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_athlete_profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_athlete_page_editTextProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person_pin"
        android:drawablePadding="16sp"
        android:hint="@string/profile_name"
        android:inputType="textEmailAddress"
        android:padding="15sp"
        app:layout_constraintBottom_toTopOf="@+id/add_athlete_page_buttonAdd"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/add_athlete_page_buttonAdd"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_teal"
        android:padding="8sp"
        android:layout_marginBottom="8sp"
        android:text="@string/add_athlete"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38" />

    <TextView
        android:id="@+id/add_athlete_page_textViewSelectedProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_profile"
        android:padding="5sp"
        android:layout_marginTop="8sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <Spinner
        android:id="@+id/add_athlete_page_spinnerAthleteProfiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginLeft="8sp"
        android:padding="5sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_athlete_page_textViewSelectedProfile"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toEndOf="@+id/add_athlete_page_textViewSelectedProfile"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:layout_marginTop="15sp"
        android:text="@string/add_monthly_activities"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/add_athlete_page_spinnerAthleteProfiles" />

    <EditText
        android:id="@+id/add_athlete_page_editTextMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:drawablePadding="16sp"
        android:hint="@string/link_to_strava_monthly_activities"
        android:inputType="textUri"
        android:padding="15sp"
        android:layout_marginTop="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/url_example"
        android:textColor="@color/black"
        android:padding="5sp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/add_athlete_page_editTextMonth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/monthly_activities_url_example"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/add_athlete_page_buttonAddActivities"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border_teal"
        android:padding="8sp"
        android:text="@string/add_activities"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/add_athlete_page_buttonViewActivities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_purple_700"
        android:text="@string/view_activities"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/add_athlete_page_progressBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/add_athlete_page_buttonAddServerAddress" />

    <Button
        android:id="@+id/add_athlete_page_buttonAddServerAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_purple_700"
        android:text="@string/add_server_address"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toBottomOf="@+id/add_athlete_page_buttonAddActivities" />

    <ProgressBar
        android:id="@+id/add_athlete_page_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/red"
        android:max="100"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>