<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/dialog_change_password_editTextOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock24"
        android:drawablePadding="16sp"
        android:layout_marginTop="15dp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_change_password_editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock24"
        android:drawablePadding="16sp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_editTextOldPassword" />

    <EditText
        android:id="@+id/dialog_change_password_editTextConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock24"
        android:drawablePadding="16sp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_editTextPassword" />

    <Button
        android:id="@+id/dialog_change_password_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/teal_700"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_change_password_save_button"
        app:layout_constraintEnd_toStartOf="@+id/dialog_change_password_save_button"
        app:layout_constraintTop_toTopOf="@+id/dialog_change_password_save_button" />

    <Button
        android:id="@+id/dialog_change_password_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:background="@android:color/transparent"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/save"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_editTextConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>