<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/insert_title"/>
    <EditText
        android:id="@+id/dialog_add_information_title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16sp"
        android:hint="@string/title"
        android:padding="15sp"
        android:layout_marginTop="15sp"
        android:inputType="text"
        android:background="@drawable/round_border"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:text="@string/information"/>

    <EditText
        android:id="@+id/dialog_add_information_information_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16sp"
        android:padding="15sp"
        android:layout_marginTop="15sp"
        android:inputType="textMultiLine"
        android:background="@drawable/round_border"
        android:lines="4"
        android:maxLines="5"
        android:scrollbars="vertical"
        />




</androidx.appcompat.widget.LinearLayoutCompat>