<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/table_row_layout_tableLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:background="@color/purple_500">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.37" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/table_row_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2sp"
        android:text="@string/segments"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_row_text2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="2sp"
        android:text="@string/distance"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline46"
        app:layout_constraintStart_toStartOf="@+id/guideline45"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_row_text3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2sp"
        android:text="@string/movingtime_nelapsedtime"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline47"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/table_row_text4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2sp"
        android:text="@string/calories"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline48"
        app:layout_constraintStart_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_row_text5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2sp"
        android:text="@string/pace"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline48"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
<!--    android:stretchColumns="1,2,3,4,5">-->








