<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/dialog_change_password_using_email_recoverEmail_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/dialog_change_password_using_email_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/teal_700"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_change_password_using_email_recover_button"
        app:layout_constraintEnd_toStartOf="@+id/dialog_change_password_using_email_recover_button"
        app:layout_constraintTop_toTopOf="@+id/dialog_change_password_using_email_recover_button" />

    <Button
        android:id="@+id/dialog_change_password_using_email_recover_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:background="@android:color/transparent"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/recover"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_change_password_using_email_recoverEmail_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>