<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/advanced_view_page_filters_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.4"
    tools:context=".activities.AdvancedViewActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="Athlete Profiles:"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/advanced_view_page_spinnerAthleteProfiles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8sp"
        android:padding="5sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:padding="8sp"
        android:text="@string/filters"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:padding="8sp"
        android:text="@string/display_segments_for"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/advanced_view_page_spinnerDataSegments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:layout_marginLeft="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:gravity="center"
        android:padding="8sp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <EditText
        android:id="@+id/advanced_view_page_start_date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/start_date"
        android:padding="8sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toStartOf="@+id/guideline43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8sp"
        android:layout_marginTop="8sp"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <EditText
        android:id="@+id/advanced_view_page_end_date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/end_date"
        android:padding="8sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/advanced_view_page_display_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/round_button_teal_background"
        android:padding="2sp"
        android:text="@string/display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline42" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/advanced_view_page_upDownArrow_imageView"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_gravity="right"
        android:padding="5sp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_keyboard_arrow_up"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/advanced_view_page_displayData_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>


</androidx.appcompat.widget.LinearLayoutCompat>